--- a/yapp/de.lproj/Localizable.strings
+++ b/yapp/de.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Drücke %@, um den gewählten Eintrag zu kopieren.";
 "paste_modifiers_config" = "• Drücke %@, um den gewählten Eintrag zu kopieren und einzufügen.";
 "format_modifiers_config" = "• Drücke %@, um den gewählten Eintrag zu kopieren und unformatiert einzufügen.";
-"accessibility_alert_message" = "“Y” möchte diesen Computer mittels Bedienungshilfen steuern.";
-"accessibility_alert_comment" = "Erlaube den Zugriff für diese Anwendung in “Systemeinstellungen > Sicherheit & Datenschutz > Datenschutz > Bedienungshilfen”.\n\nKlicken Sie auf die Schaltfläche “+“, wählen Sie “Y“ aus und aktivieren Sie das Kontrollkästchen daneben.";
+"accessibility_alert_message" = "“YApp” möchte diesen Computer mittels Bedienungshilfen steuern.";
+"accessibility_alert_comment" = "Erlaube den Zugriff für diese Anwendung in “Systemeinstellungen > Sicherheit & Datenschutz > Datenschutz > Bedienungshilfen”.\n\nKlicken Sie auf die Schaltfläche “+“, wählen Sie “YApp“ aus und aktivieren Sie das Kontrollkästchen daneben.";
 "accessibility_alert_deny" = "Ablehnen";
 "accessibility_alert_open" = "Öffne Systemeinstellungen";
 "clear_alert_message" = "Möchtest du den Verlauf wirklich leeren?";
