--- a/yapp/hr.lproj/Localizable.strings
+++ b/yapp/hr.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Za kopiranje elementa odaberi zajedno s pritisnutom tipkom %@.";
 "paste_modifiers_config" = "• Za kopiranje i umetanje elementa odaberi zajedno s pritisnutom tipkom %@.";
 "format_modifiers_config" = "• Za kopiranje, uklanjanje formata i umetanje elementa odaberi zajedno s pritisnutom tipkom %@.";
-"accessibility_alert_message" = "„Y” želi upravljati ovim računalom koristeći funkcije pristupačnosti.";
-"accessibility_alert_comment" = "Dozvoli pristup ovom programu u postavkama za sigurnost i privatnost u postavkama sustava.\n\nKliknite gumb „+”, odaberite „Y” i uključite potvrdni okvir pokraj njega.";
+"accessibility_alert_message" = "„YApp” želi upravljati ovim računalom koristeći funkcije pristupačnosti.";
+"accessibility_alert_comment" = "Dozvoli pristup ovom programu u postavkama za sigurnost i privatnost u postavkama sustava.\n\nKliknite gumb „+”, odaberite „YApp” i uključite potvrdni okvir pokraj njega.";
 "accessibility_alert_deny" = "Zabrani";
 "accessibility_alert_open" = "Otvori postavke sustava";
 "clear_alert_message" = "Stvarno želiš izbrisati povijest?";
