--- a/yapp/uk.lproj/Localizable.strings
+++ b/yapp/uk.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Виберіть, натиснувши %@, щоб скопіювати елемент.";
 "paste_modifiers_config" = "• Виберіть, натиснувши %@, щоб скопіювати та вставити елемент.";
 "format_modifiers_config" = "• Виберіть, натиснувши %@, щоб скопіювати, очистити форматування та вставити елемент.";
-"accessibility_alert_message" = "“Y” хоче керувати цим комп’ютером за допомогою функцій доступності.";
-"accessibility_alert_comment" = "Надайте доступ до цієї програми в налаштуваннях «Безпека та конфіденційність», розташованих у «Налаштуваннях системи».\n\nНатисніть кнопку “+“, виберіть “Y“ і встановіть прапорець поруч із ним.";
+"accessibility_alert_message" = "“YApp” хоче керувати цим комп’ютером за допомогою функцій доступності.";
+"accessibility_alert_comment" = "Надайте доступ до цієї програми в налаштуваннях «Безпека та конфіденційність», розташованих у «Налаштуваннях системи».\n\nНатисніть кнопку “+“, виберіть “YApp“ і встановіть прапорець поруч із ним.";
 "accessibility_alert_deny" = "Відказати";
 "accessibility_alert_open" = "Відкрити Системні налаштування";
 "clear_alert_message" = "Ви впевнені, що бажаєте очистити історію?";
