--- a/yapp/Preferences/bs.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/bs.lproj/AdvancedPreferenceViewController.strings
@@ -5,8 +5,8 @@
 /* Class = "NSButtonCell"; title = "Clear history on quit"; ObjectID = "JvB-ng-8vt"; */
 "JvB-ng-8vt.title" = "Očisti historiju pri izlasku iz aplikacije";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# kopirati podatke\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# kopirati podatke\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "Automatically remove all unpinned items before quitting the application."; ObjectID = "LW1-8W-pFI"; */
 "LW1-8W-pFI.title" = "Automatski ukloni sve zakačene stavke prije zatvaranja aplikacije.";
@@ -20,8 +20,8 @@
 /* Class = "NSButtonCell"; title = "Clear the system clipboard too"; ObjectID = "WSh-1o-SG8"; */
 "WSh-1o-SG8.title" = "Očistite i sistemski međuspremnik";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y preuzima aktivan fokus aplikacije kada se prikaže iskačući prozor i vraća fokus kada je zatvoren. Fokus je potreban za napredno rukovanje unosom u macOS-u kao što je kineski pomoćnik ili meni za naglaske. Omogućavanje ove opcije spriječilo bi Yja da se fokusira. Postoje određene situacije kada ovo može biti korisno: na primjer, lijepljenje u uređivač teksta koji automatski formatira kod kada izgubi fokus.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp preuzima aktivan fokus aplikacije kada se prikaže iskačući prozor i vraća fokus kada je zatvoren. Fokus je potreban za napredno rukovanje unosom u macOS-u kao što je kineski pomoćnik ili meni za naglaske. Omogućavanje ove opcije spriječilo bi YAppja da se fokusira. Postoje određene situacije kada ovo može biti korisno: na primjer, lijepljenje u uređivač teksta koji automatski formatira kod kada izgubi fokus.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Izbjegni fokusiranje na aplikaciju";
