--- a/yapp/Preferences/de.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/de.lproj/AdvancedPreferenceViewController.strings
@@ -2,17 +2,17 @@
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
 "Ejh-zi-AFs.title" = "Vorrübergehend alle neue Einträge ignorieren. Zum Beispiel während dem Kopieren von sensiblen Daten.\nDies kann über das Terminal aktiviert und deaktiviert werden mit:";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# Einträge wieder kopieren\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# Einträge wieder kopieren\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
-"lwS-2p-WwS.title" = "Um Y zu deaktivieren, klicke auf das Menüleistensymbol und halte dabei ⌥ gedrückt. Um nur die nächste Kopie zu ignorieren, klicke und halte ⌥⇧ gedrückt.";
+"lwS-2p-WwS.title" = "Um YApp zu deaktivieren, klicke auf das Menüleistensymbol und halte dabei ⌥ gedrückt. Um nur die nächste Kopie zu ignorieren, klicke und halte ⌥⇧ gedrückt.";
 
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "Deaktivieren";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "“Y” nimmt der aktiven Anwendung den Fokus kurzzeitig weg, während das Popup angezeigt wird. Dabei wird der Fokus automatisch zum Suchfeld von “Y” platziert, was die Benutzerfreundlichkeit erhöht. Das Aktivieren dieser Option würde “Y” daran hindern, den Fokus zu übernehmen. Dies kann in bestimmten Situationen nützlich sein: zum Beispiel beim Einfügen in einen Texteditor, der Code automatisch formatiert, wenn dieser den Fokus verliert.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "“YApp” nimmt der aktiven Anwendung den Fokus kurzzeitig weg, während das Popup angezeigt wird. Dabei wird der Fokus automatisch zum Suchfeld von “YApp” platziert, was die Benutzerfreundlichkeit erhöht. Das Aktivieren dieser Option würde “YApp” daran hindern, den Fokus zu übernehmen. Dies kann in bestimmten Situationen nützlich sein: zum Beispiel beim Einfügen in einen Texteditor, der Code automatisch formatiert, wenn dieser den Fokus verliert.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Verhindert das Wegnehmen des Fokus der aktiven Anwendung ";
