--- a/yapp/Preferences/es.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/es.lproj/AdvancedPreferenceViewController.strings
@@ -2,8 +2,8 @@
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
 "Ejh-zi-AFs.title" = "Ignora temporalmente los nuevos elementos copiados.\nTambién se puede (des)activar la opción por consola para evitar copiar datos sensibles.";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# volver a copiar elementos\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# volver a copiar elementos\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "También puede hacer clic en el icono de menú con ⌥ presionado. Para ignorar solo la siguiente copia, haga clic con ⌥⇧.";
@@ -11,8 +11,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "Desactivar";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y toma un enfoque de aplicación activo cuando se muestra la ventana emergente y devuelve el enfoque cuando está cerrado. El enfoque es necesario para el manejo avanzado de entradas de macOS, como el asistente chino o el menú de acento. Habilitar esta opción evitaría que Y se enfocara. Hay ciertas situaciones en las que esto puede ser útil: por ejemplo, pegar en un editor de texto que formatea automáticamente el código cuando pierde el foco.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp toma un enfoque de aplicación activo cuando se muestra la ventana emergente y devuelve el enfoque cuando está cerrado. El enfoque es necesario para el manejo avanzado de entradas de macOS, como el asistente chino o el menú de acento. Habilitar esta opción evitaría que YApp se enfocara. Hay ciertas situaciones en las que esto puede ser útil: por ejemplo, pegar en un editor de texto que formatea automáticamente el código cuando pierde el foco.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Evite centrarse en la aplicación";
