--- a/yapp/Preferences/fr.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/fr.lproj/AdvancedPreferenceViewController.strings
@@ -2,8 +2,8 @@
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
 "Ejh-zi-AFs.title" = "Ignorer temporairement toute nouvelle copie.\nVous êtes susceptible de l'utiliser pour le développement ou lors de la copie de données sensibles.";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# copier des données\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# copier des données\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "Vous pouvez également cliquer sur l'icône du menu en appuyant sur ⌥. Pour ignorer uniquement la copie suivante, cliquez avec ⌥⇧.";
@@ -11,8 +11,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "Éteindre";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y prend un focus d'application actif lorsque le popup est affiché et redonne le focus lorsqu'il est fermé. La mise au point est nécessaire pour la gestion avancée des entrées macOS telles que l'assistant chinois ou le menu d'accentuation. L'activation de cette option empêcherait Y de se concentrer. Dans certaines situations, cela peut être utile: par exemple, coller dans un éditeur de texte qui formate automatiquement le code lorsqu'il perd le focus.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp prend un focus d'application actif lorsque le popup est affiché et redonne le focus lorsqu'il est fermé. La mise au point est nécessaire pour la gestion avancée des entrées macOS telles que l'assistant chinois ou le menu d'accentuation. L'activation de cette option empêcherait YApp de se concentrer. Dans certaines situations, cela peut être utile: par exemple, coller dans un éditeur de texte qui formate automatiquement le code lorsqu'il perd le focus.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Évitez de vous concentrer sur l'application";
