--- a/yapp/Preferences/hr.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/hr.lproj/AdvancedPreferenceViewController.strings
@@ -2,8 +2,8 @@
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
 "Ejh-zi-AFs.title" = "Privremeno zanemari sve nove kopije.\nVjerojatno ćeš ga koristiti tijekom programiranja i deaktivirati tijekom kopiranja osjetljivih podataka.";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# kopiraj podatke\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# kopiraj podatke\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "Također možete kliknuti ikonu izbornika s pritisnutim ⌥. Za ignoriranje samo sljedeće kopije kliknite s ⌥⇧.";
@@ -11,8 +11,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "Isključi";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y uzima aktivan fokus programa kad se prikaže skočni prozor i vraća fokus kad se zatvori. Fokus je potreban za napredno rukovanje unosom na macOS-u, poput pomoćnika za kineski ili izbornika za naglaske. Aktiviranje ove opcije spriječilo bi Y da preuzme fokus. Postoje određene situacije u kojima to može biti korisno: na primjer, umetanje u uređivač teksta koji automatski formatira kod kad izgubi fokus.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp uzima aktivan fokus programa kad se prikaže skočni prozor i vraća fokus kad se zatvori. Fokus je potreban za napredno rukovanje unosom na macOS-u, poput pomoćnika za kineski ili izbornika za naglaske. Aktiviranje ove opcije spriječilo bi YApp da preuzme fokus. Postoje određene situacije u kojima to može biti korisno: na primjer, umetanje u uređivač teksta koji automatski formatira kod kad izgubi fokus.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Izbjegni preuzimati fokus programa";
