--- a/yapp/Preferences/it.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/it.lproj/AdvancedPreferenceViewController.strings
@@ -2,8 +2,8 @@
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
 "Ejh-zi-AFs.title" = "Ignora temporaneamente tutte le nuove copie.\nÈ probabile che verrà utilizzato a livello di programmazione e disabiliti l'applicazione durante la copia di dati sensibili.";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# copia dei dati\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# copia dei dati\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "Puoi anche fare clic sull'icona del menu premendo ⌥. Per ignorare solo la copia successiva, fare clic con ⌥⇧.";
@@ -11,8 +11,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "Disattivare";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y attiva il focus dell'applicazione quando viene mostrato il popup e lo restituisce quando viene chiuso. Il focus è necessario per la gestione avanzata dell'input macOS come l'helper per il cinese o il menu degli accenti. Abilitare questa opzione impedirebbe a Y di prendere il focus. Ci sono alcune situazioni in cui questo può essere utile: ad esempio, incollare in un editor di testo che formatta automaticamente il codice quando perde il focus.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp attiva il focus dell'applicazione quando viene mostrato il popup e lo restituisce quando viene chiuso. Il focus è necessario per la gestione avanzata dell'input macOS come l'helper per il cinese o il menu degli accenti. Abilitare questa opzione impedirebbe a YApp di prendere il focus. Ci sono alcune situazioni in cui questo può essere utile: ad esempio, incollare in un editor di testo che formatta automaticamente il codice quando perde il focus.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Impedisci di prendere il focus dell'applicazione";
