--- a/yapp/Preferences/ja.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/ja.lproj/AdvancedPreferenceViewController.strings
@@ -1,12 +1,12 @@
 
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
-"Ejh-zi-AFs.title" = "このオプションを有効にすると、一時的に全ての新規コピーを無視します。\nまた、重要なデータをコピーする場合は、下記のコマンドを用いてYを無効にすることもできます。";
+"Ejh-zi-AFs.title" = "このオプションを有効にすると、一時的に全ての新規コピーを無視します。\nまた、重要なデータをコピーする場合は、下記のコマンドを用いてYAppを無効にすることもできます。";
 
 /* Class = "NSButtonCell"; title = "Clear history on quit"; ObjectID = "JvB-ng-8vt"; */
 "JvB-ng-8vt.title" = "終了時、履歴をクリアする";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# データコピー\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# データコピー\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "⌥ を押したままメニュー アイコンをクリックすることもできます。 次のコピーだけを無視するには、⌥⇧でクリックします。";
@@ -17,8 +17,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "オフにする";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Yは、ポップアップを表示するとアクティブなアプリケーションのフォーカスを取り、閉じられるとフォーカスを戻します。一方で、中国語ヘルパーやアクセントメニューなど、macOSの予測入力処理にはフォーカスが必要とされます。このオプションを有効にすると、Yはフォーカスを取らないようになります。次の例のようにこのオプションが役立つ特別な状況もあります。※例：フォーカスを失ったときにコードを自動フォーマットするテキストエディターに貼り付ける場合";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YAppは、ポップアップを表示するとアクティブなアプリケーションのフォーカスを取り、閉じられるとフォーカスを戻します。一方で、中国語ヘルパーやアクセントメニューなど、macOSの予測入力処理にはフォーカスが必要とされます。このオプションを有効にすると、YAppはフォーカスを取らないようになります。次の例のようにこのオプションが役立つ特別な状況もあります。※例：フォーカスを失ったときにコードを自動フォーマットするテキストエディターに貼り付ける場合";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "アプリケーションのフォーカスを取らない";
