--- a/yapp/Preferences/ko.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/ko.lproj/AdvancedPreferenceViewController.strings
@@ -5,8 +5,8 @@
 /* Class = "NSButtonCell"; title = "Clear history on quit"; ObjectID = "JvB-ng-8vt"; */
 "JvB-ng-8vt.title" = "종료시 기록 지우기";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# 데이터 복사\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# 데이터 복사\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "⌥를 누른 상태에서 메뉴 아이콘을 클릭할 수도 있습니다. 다음 사본만 무시하려면 ⌥⇧로 클릭하십시오.";
@@ -17,8 +17,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "끄기";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y는 팝업이 표시될 때 활성 어플리케이션 포커스를 가져오고 닫힐 때 다시 포커스를 제공합니다. 중국어 도우미 또는 액센트 메뉴와 같은 macOS 고급 입력 처리에는 포커스가 필요합니다. 이 옵션을 활성화하면 Y가 포커스를 가져오는 것을 방지할 수 있습니다. 이것이 유용할 수 있는 특정 상황들이 있습니다. 예: 포커스를 잃을 때 코드를 자동으로 서식 지정하는 텍스트 에디터에 붙여넣을 때";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp는 팝업이 표시될 때 활성 어플리케이션 포커스를 가져오고 닫힐 때 다시 포커스를 제공합니다. 중국어 도우미 또는 액센트 메뉴와 같은 macOS 고급 입력 처리에는 포커스가 필요합니다. 이 옵션을 활성화하면 YApp가 포커스를 가져오는 것을 방지할 수 있습니다. 이것이 유용할 수 있는 특정 상황들이 있습니다. 예: 포커스를 잃을 때 코드를 자동으로 서식 지정하는 텍스트 에디터에 붙여넣을 때";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "어플리케이션 포커싱 방지";
