--- a/yapp/Preferences/th.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/th.lproj/AdvancedPreferenceViewController.strings
@@ -5,8 +5,8 @@
 /* Class = "NSButtonCell"; title = "Clear history on quit"; ObjectID = "JvB-ng-8vt"; */
 "JvB-ng-8vt.title" = "ล้างประวัติเมื่อออก";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# คัดลอกข้อมูล\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# คัดลอกข้อมูล\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "คุณยังสามารถคลิกไอคอนเมนูโดยกด ⌥ หากต้องการละเว้นเฉพาะสำเนาถัดไป ให้คลิกด้วย ⌥⇧";
@@ -17,8 +17,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "ปิด";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y จะทำการกับแอป Active อยู่. จำเป็นต้องมีตั้งค่าสำหรับการจัดการ input ของ macOS ในระดับสูง เช่น ตัวช่วยการพิมพ์ภาษาจีนหรือเมนูอื่นๆ. เปิดตัวเลือกนี้ป้องกันไม่ให้ Y หลุดการทำงาน. มีบางสถาการณ์ที่จะเป็นประโยชน์ เช่น การวางลงแอปแก้ไขข้อความ เพื่อป้องกันการหลุดการทำงาน";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp จะทำการกับแอป Active อยู่. จำเป็นต้องมีตั้งค่าสำหรับการจัดการ input ของ macOS ในระดับสูง เช่น ตัวช่วยการพิมพ์ภาษาจีนหรือเมนูอื่นๆ. เปิดตัวเลือกนี้ป้องกันไม่ให้ YApp หลุดการทำงาน. มีบางสถาการณ์ที่จะเป็นประโยชน์ เช่น การวางลงแอปแก้ไขข้อความ เพื่อป้องกันการหลุดการทำงาน";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "หลีกเลี่ยงแอปหลุดการทำงาน";
