--- a/yapp/Preferences/tr.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/tr.lproj/AdvancedPreferenceViewController.strings
@@ -5,8 +5,8 @@
 /* Class = "NSButtonCell"; title = "Clear history on quit"; ObjectID = "JvB-ng-8vt"; */
 "JvB-ng-8vt.title" = "Çıkışta geçmişi temizle";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# verileri kopyala\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# verileri kopyala\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "Automatically remove all unpinned items before quitting the application."; ObjectID = "LW1-8W-pFI"; */
 "LW1-8W-pFI.title" = "Uygulamadan çıkmadan önce tüm iğnesi çıkarılmış ögeleri kendiliğinden kaldır.";
@@ -14,8 +14,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "Kapat";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y, açılır pencere gösterildiğinde etkin uygulamanın odağını alır ve kapatıldığında geri verir. Odak, gelişmiş macOS girdi işlemesi için gereklidir; örn. Çince yardımcısı veya vurgu menüsü. Bu seçeneği etkinleştirmek, Y'nin odağı alamamasına neden olur. Bunun yararlı olabileceği kimi durumlar vardır; örneğin odağı kaybettiğinde kodu kendiliğinden biçimlendiren bir metin düzenleyiciye yapıştırırken.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp, açılır pencere gösterildiğinde etkin uygulamanın odağını alır ve kapatıldığında geri verir. Odak, gelişmiş macOS girdi işlemesi için gereklidir; örn. Çince yardımcısı veya vurgu menüsü. Bu seçeneği etkinleştirmek, YApp'nin odağı alamamasına neden olur. Bunun yararlı olabileceği kimi durumlar vardır; örneğin odağı kaybettiğinde kodu kendiliğinden biçimlendiren bir metin düzenleyiciye yapıştırırken.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Uygulama odağını almaktan kaçın";
