--- a/yapp/Preferences/uk.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/uk.lproj/AdvancedPreferenceViewController.strings
@@ -5,8 +5,8 @@
 /* Class = "NSButtonCell"; title = "Clear history on quit"; ObjectID = "JvB-ng-8vt"; */
 "JvB-ng-8vt.title" = "Очистити історію після виходу";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# копіювати данні\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# копіювати данні\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "Automatically remove all unpinned items before quitting the application."; ObjectID = "LW1-8W-pFI"; */
 "LW1-8W-pFI.title" = "Автоматично видаляйте всі незакріплені елементи перед виходом із програми.";
@@ -20,8 +20,8 @@
 /* Class = "NSButtonCell"; title = "Clear the system clipboard too"; ObjectID = "WSh-1o-SG8"; */
 "WSh-1o-SG8.title" = "Також очистіть системний буфер обміну";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "Y приймає фокус активної програми, коли відображається спливаюче вікно, і повертає фокус, коли воно закривається. Фокус потрібен для розширеної обробки вводу в macOS, як-от китайський помічник або меню акцентів. Якщо ввімкнути цю опцію, Y не сфокусується. Є певні ситуації, коли це може бути корисним: наприклад, вставлення в текстовий редактор, який автоматично форматує код, коли він втрачає фокус.";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "YApp приймає фокус активної програми, коли відображається спливаюче вікно, і повертає фокус, коли воно закривається. Фокус потрібен для розширеної обробки вводу в macOS, як-от китайський помічник або меню акцентів. Якщо ввімкнути цю опцію, YApp не сфокусується. Є певні ситуації, коли це може бути корисним: наприклад, вставлення в текстовий редактор, який автоматично форматує код, коли він втрачає фокус.";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "Уникайте фокусування програми";
