--- a/yapp/Preferences/zh-Hans.lproj/AdvancedPreferenceViewController.strings
+++ b/yapp/Preferences/zh-Hans.lproj/AdvancedPreferenceViewController.strings
@@ -2,8 +2,8 @@
 /* Class = "NSTextFieldCell"; title = "Temporarily ignore all new copies.\nYou are likely to use it programmatically and disable application while copying sensitive data."; ObjectID = "Ejh-zi-AFs"; */
 "Ejh-zi-AFs.title" = "暂停记录新的剪贴板项目。\n此选项通常用于在复制敏感数据时通过程序调用来禁用本程序。";
 
-/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.Y ignoreEvents true\n# copy data\ndefaults write org.zeekay.Y ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
-"LFh-6b-GFi.title" = "defaults write org.zeekay.Y ignoreEvents true\n# 执行上述命令后再进行复制，复制完成后执行\ndefaults write org.zeekay.Y ignoreEvents false";
+/* Class = "NSTextFieldCell"; title = "defaults write org.zeekay.YApp ignoreEvents true\n# copy data\ndefaults write org.zeekay.YApp ignoreEvents false"; ObjectID = "LFh-6b-GFi"; */
+"LFh-6b-GFi.title" = "defaults write org.zeekay.YApp ignoreEvents true\n# 执行上述命令后再进行复制，复制完成后执行\ndefaults write org.zeekay.YApp ignoreEvents false";
 
 /* Class = "NSTextFieldCell"; title = "You can also click the menu icon with ⌥ pressed. To ignore only the next copy, click with ⌥⇧."; ObjectID = "lwS-2p-WwS"; */
 "lwS-2p-WwS.title" = "您也可以按下 ⌥ 单击菜单图标。 要仅忽略下一个副本，请单击 ⌥⇧。";
@@ -11,8 +11,8 @@
 /* Class = "NSButtonCell"; title = "Turn off"; ObjectID = "RA0-eh-Udt"; */
 "RA0-eh-Udt.title" = "暂停";
 
-/* Class = "NSTextFieldCell"; title = "Y takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent Y from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
-"Y8y-xQ-lFm.title" = "允许 Y 的剪贴板弹窗获取焦点，弹窗关闭时返还给前台应用。高级 macOS 输入程序（如中文输入法或变音符号菜单）需要获取焦点才能使用。启用此选项后 Y 将不会获取焦点。 某些时候这会有所帮助，比如要粘贴文本到一个设置了失去焦点时会自动格式化代码的文本编辑器时。";
+/* Class = "NSTextFieldCell"; title = "YApp takes an active application focus when the popup is shown and gives focus back when it's closed. The focus is needed for advanced macOS input handling such as Chinese helper or accent menu. Enabling this option would prevent YApp from taking focus. There are certain situations when this can be useful: for example, pasting to a text editor that auto-formats code when it loses focus."; ObjectID = "Y8y-xQ-lFm"; */
+"Y8y-xQ-lFm.title" = "允许 YApp 的剪贴板弹窗获取焦点，弹窗关闭时返还给前台应用。高级 macOS 输入程序（如中文输入法或变音符号菜单）需要获取焦点才能使用。启用此选项后 YApp 将不会获取焦点。 某些时候这会有所帮助，比如要粘贴文本到一个设置了失去焦点时会自动格式化代码的文本编辑器时。";
 
 /* Class = "NSButtonCell"; title = "Avoid taking application focus"; ObjectID = "jjU-HE-iIA"; */
 "jjU-HE-iIA.title" = "不允许获取焦点";
