--- a/yapp/en.lproj/Localizable.strings
+++ b/yapp/en.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Select with %@ pressed to copy item.";
 "paste_modifiers_config" = "• Select with %@ pressed to copy and paste item.";
 "format_modifiers_config" = "• Select with %@ pressed to copy, clear formatting and paste item.";
-"accessibility_alert_message" = "“Y” would like to control this computer using accessibility features.";
-"accessibility_alert_comment" = "Grant access to this application in Security & Privacy preferences, located in System Preferences.\n\nClick + button, select Y and toggle on the checkbox next to it.";
+"accessibility_alert_message" = "“YApp” would like to control this computer using accessibility features.";
+"accessibility_alert_comment" = "Grant access to this application in Security & Privacy preferences, located in System Preferences.\n\nClick + button, select YApp and toggle on the checkbox next to it.";
 "accessibility_alert_deny" = "Deny";
 "accessibility_alert_open" = "Open System Preferences";
 "clear_alert_message" = "Are you sure you want to clear the history?";
