--- a/yapp/es.lproj/Localizable.strings
+++ b/yapp/es.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Seleccione con %@ presionado para copiar el elemento.";
 "paste_modifiers_config" = "• Seleccione con %@ presionado para copiar y pegar el elemento.";
 "format_modifiers_config" = "• Seleccione con %@ presionado para copiar, borrar el formato y pegar el elemento.";
-"accessibility_alert_message" = "“Y” quiere controlar esta computadora mediante las funciones de accesibilidad.";
-"accessibility_alert_comment" = "Dale acceso a esta aplicación en el panel “Seguridad y privacidad” de Preferencias del Sistema.\n\nHaga clic en el botón “+”, seleccione “Y“ y active la casilla de verificación junto a él.";
+"accessibility_alert_message" = "“YApp” quiere controlar esta computadora mediante las funciones de accesibilidad.";
+"accessibility_alert_comment" = "Dale acceso a esta aplicación en el panel “Seguridad y privacidad” de Preferencias del Sistema.\n\nHaga clic en el botón “+”, seleccione “YApp“ y active la casilla de verificación junto a él.";
 "accessibility_alert_deny" = "Denegar";
 "accessibility_alert_open" = "Abrir Preferencias del Sistema";
 "clear_alert_message" = "¿Estás seguro de que deseas borrar el historial?";
