--- a/yapp/fr.lproj/Localizable.strings
+++ b/yapp/fr.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Selectionnez avec %@ pressé pour copier un élément.";
 "paste_modifiers_config" = "• Selectionnez avec %@ pressé pour copier et coller l'élément.";
 "format_modifiers_config" = "• Selectionnez avec %@ pressé pour copier, reformater et coller l'élément.";
-"accessibility_alert_message" = "“Y” souhaite contrôler cet ordinateur en utilisant des fonctions d'accessibilité.";
-"accessibility_alert_comment" = "Accorder les droits à cette application dans le panneau Sécurité & confidentialité, situé dans Préférences Système.\n\nCliquez sur le bouton +, sélectionnez “Y“ et cochez la case à côté.";
+"accessibility_alert_message" = "“YApp” souhaite contrôler cet ordinateur en utilisant des fonctions d'accessibilité.";
+"accessibility_alert_comment" = "Accorder les droits à cette application dans le panneau Sécurité & confidentialité, situé dans Préférences Système.\n\nCliquez sur le bouton +, sélectionnez “YApp“ et cochez la case à côté.";
 "accessibility_alert_deny" = "Refuser";
 "accessibility_alert_open" = "Ouvrir les Préférences Système";
 "clear_alert_message" = "Voulez-vous vraiment effacer l'historique?";
