--- a/yapp/it.lproj/Localizable.strings
+++ b/yapp/it.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Seleziona con %@ premuto per copiare l'elemento.";
 "paste_modifiers_config" = "• Seleziona con %@ premuto per copiare e incollare l'elemento.";
 "format_modifiers_config" = "• Seleziona con %@ premuto per copiare, eliminare la formattazione e incollare l'elemento.";
-"accessibility_alert_message" = "“Y” vorrebbe controllare questo computer utilizzando le funzionalità di accessibilità.";
-"accessibility_alert_comment" = "Concedi l'accesso a questa applicazione nella sezione Sicurezza e Privacy, situata in Preferenze di Sistema.\n\nFai clic sul pulsante “+“, seleziona “Y“ e attiva la casella di controllo accanto ad esso.";
+"accessibility_alert_message" = "“YApp” vorrebbe controllare questo computer utilizzando le funzionalità di accessibilità.";
+"accessibility_alert_comment" = "Concedi l'accesso a questa applicazione nella sezione Sicurezza e Privacy, situata in Preferenze di Sistema.\n\nFai clic sul pulsante “+“, seleziona “YApp“ e attiva la casella di controllo accanto ad esso.";
 "accessibility_alert_deny" = "Nega";
 "accessibility_alert_open" = "Apri Preferenze di Sistema";
 "clear_alert_message" = "Sei sicuro di voler cancellare la cronologia?";
