--- a/yapp/ja.lproj/Localizable.strings
+++ b/yapp/ja.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• %を押しながら選択すると項目をコピーします。";
 "paste_modifiers_config" = "• %@を押しながら選択すると項目をコピーして貼り付けます。";
 "format_modifiers_config" = "• %@を押しながら選択すると項目をコピーし、 書式なしで貼り付けます。";
-"accessibility_alert_message" = "“Y”は、アクセシビリティ機能を使用してこのコンピュータを制御することを求めています。";
-"accessibility_alert_comment" = "システム環境設定の“セキュリティとプライバシー”環境設定で、このアプリケーションへのアクセスを許可してください。\n\n“+“ボタンをクリックし、“Y“を選択して、その横のチェックボックスをオンにします。";
+"accessibility_alert_message" = "“YApp”は、アクセシビリティ機能を使用してこのコンピュータを制御することを求めています。";
+"accessibility_alert_comment" = "システム環境設定の“セキュリティとプライバシー”環境設定で、このアプリケーションへのアクセスを許可してください。\n\n“+“ボタンをクリックし、“YApp“を選択して、その横のチェックボックスをオンにします。";
 "accessibility_alert_deny" = "拒否";
 "accessibility_alert_open" = "“システム環境設定”を開く";
 "clear_alert_message" = "履歴をクリアしますか？";
