--- a/yapp/nb.lproj/Localizable.strings
+++ b/yapp/nb.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Velg med %@ nedtrykket for å kopiere element.";
 "paste_modifiers_config" = "• Velg med %@ nedtrykket for å kopiere og lime inn element.";
 "format_modifiers_config" = "• Velg med %@ nedtrykket for å kopiere, slette formattering og lime inn element.";
-"accessibility_alert_message" = "“Y” vil ha adgang til denne datamaskinen for tjenester tilknyttet tilgjengelighet.";
-"accessibility_alert_comment" = "Gi tillatelse til dette programmet i Sikkerhet & Personvern innstillingene, lokalisert i System Valg.\n\nKlikk på +-knappen, velg “Y“ og velg avmerkingsboksen ved siden av.";
+"accessibility_alert_message" = "“YApp” vil ha adgang til denne datamaskinen for tjenester tilknyttet tilgjengelighet.";
+"accessibility_alert_comment" = "Gi tillatelse til dette programmet i Sikkerhet & Personvern innstillingene, lokalisert i System Valg.\n\nKlikk på +-knappen, velg “YApp“ og velg avmerkingsboksen ved siden av.";
 "accessibility_alert_deny" = "Avslå";
 "accessibility_alert_open" = "Åpne System Valg";
 "clear_alert_message" = "Er du sikker på at du vil tømme historikken?";
