--- a/yapp/ru.lproj/Localizable.strings
+++ b/yapp/ru.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Выберите, зажав %@, чтобы скопировать запись.";
 "paste_modifiers_config" = "• Выберите, зажав %@, чтобы скопировать и вставить запись.";
 "format_modifiers_config" = "• Выберите, зажав %@, чтобы скопировать, очистить форматирование и вставить запись.";
-"accessibility_alert_message" = "Приложение «Y» запрашивает разрешение на управление компьютером с помощью функций универсального доступа.";
-"accessibility_alert_comment" = "Предоставьте права доступа этой программе в настройках «Защита и безопасность» в Системных настройках.\n\nНажмите кнопку «+», выберите «Y» и установите флажок рядом с ним.";
+"accessibility_alert_message" = "Приложение «YApp» запрашивает разрешение на управление компьютером с помощью функций универсального доступа.";
+"accessibility_alert_comment" = "Предоставьте права доступа этой программе в настройках «Защита и безопасность» в Системных настройках.\n\nНажмите кнопку «+», выберите «YApp» и установите флажок рядом с ним.";
 "accessibility_alert_deny" = "Запретить";
 "accessibility_alert_open" = "Открыть «Системные настройки»";
 "clear_alert_message" = "Вы дейстительно хотите очистить историю?";
