--- a/yapp/th.lproj/Localizable.strings
+++ b/yapp/th.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• เลือกแล้วกด %@ เพื่อคัดลอก";
 "paste_modifiers_config" = "• เลือกแล้วกด %@ เพื่อคัดลอกและวางรายการ";
 "format_modifiers_config" = "• เลือกแล้วกด %@ เพื่อคัดลอก, ล้างรูปแบบและวางรายการ";
-"accessibility_alert_message" = "“Y” ต้องการใช้สิทธิ์ฟีเจอร์การช่วยการเข้าถึง";
-"accessibility_alert_comment" = "ให้สิทธิ์แอปพลิเคชันนี้ในเมนูการตั้งค่าความปลอดภัยและความเป็นส่วนตัว ใน การตั้งค่าระบบ.\n\nคลิกปุ่ม ”+” เลือก ”Y” และสลับช่องทำเครื่องหมายถัดจากนั้น.";
+"accessibility_alert_message" = "“YApp” ต้องการใช้สิทธิ์ฟีเจอร์การช่วยการเข้าถึง";
+"accessibility_alert_comment" = "ให้สิทธิ์แอปพลิเคชันนี้ในเมนูการตั้งค่าความปลอดภัยและความเป็นส่วนตัว ใน การตั้งค่าระบบ.\n\nคลิกปุ่ม ”+” เลือก ”YApp” และสลับช่องทำเครื่องหมายถัดจากนั้น.";
 "accessibility_alert_deny" = "ปฎิเสธ";
 "accessibility_alert_open" = "เปิดการตั้งค่าระบบ";
 "clear_alert_message" = "คุณต้องการล้างประวัติหรือไม่?";
