--- a/yapp/tr.lproj/Localizable.strings
+++ b/yapp/tr.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• Ögeyi kopyalamak için %@ basılı tutarak seçin.";
 "paste_modifiers_config" = "• Ögeyi kopyalayıp yapıştırmak için %@ basılı tutarak seçin.";
 "format_modifiers_config" = "• Kopyalamak, biçimlendirmeyi temizlemek ve yapıştırmak için %@ basılı tutarak seçin.";
-"accessibility_alert_message" = "“Y”, erişilebilirlik özelliklerini kullanarak bu bilgisayarı denetlemek istiyor.";
-"accessibility_alert_comment" = "Bu uygulamaya, Sistem Ayarları'nda Güvenlik ve Gizlilik bölümünden izin verin.\n\n“+“ düğmesine tıklayın, Y'yi seçin ve yanındaki onay kutusunu işaretleyin.";
+"accessibility_alert_message" = "“YApp”, erişilebilirlik özelliklerini kullanarak bu bilgisayarı denetlemek istiyor.";
+"accessibility_alert_comment" = "Bu uygulamaya, Sistem Ayarları'nda Güvenlik ve Gizlilik bölümünden izin verin.\n\n“+“ düğmesine tıklayın, YApp'yi seçin ve yanındaki onay kutusunu işaretleyin.";
 "accessibility_alert_deny" = "Reddet";
 "accessibility_alert_open" = "Sistem Ayarları'nı Aç";
 "clear_alert_message" = "Geçmişi temizlemek istediğinize emin misiniz?";
