--- a/yapp/zh-Hans.lproj/Localizable.strings
+++ b/yapp/zh-Hans.lproj/Localizable.strings
@@ -17,8 +17,8 @@
 "copy_modifiers_config" = "• 按住 %@ 选择项目以复制";
 "paste_modifiers_config" = "• 按住 %@ 选择项目以复制并粘贴";
 "format_modifiers_config" = "• 按住 %@ 选择项目以复制并匹配格式粘贴";
-"accessibility_alert_message" = "“Y“想要使用“辅助功能”控制此计算机。";
-"accessibility_alert_comment" = "在“系统偏好设置”中的“安全性和隐私”设置中授予此应用程序权限。\n\n单击 ”+” 按钮，选择 ”Y” 并打开旁边的复选框。";
+"accessibility_alert_message" = "“YApp“想要使用“辅助功能”控制此计算机。";
+"accessibility_alert_comment" = "在“系统偏好设置”中的“安全性和隐私”设置中授予此应用程序权限。\n\n单击 ”+” 按钮，选择 ”YApp” 并打开旁边的复选框。";
 "accessibility_alert_deny" = "拒绝";
 "accessibility_alert_open" = "打开系统偏好设置";
 "clear_alert_message" = "确定要清除历史记录吗？";
