Update english strings

--- a/YApp/en.lproj/Localizable.strings
+++ b/YApp/en.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"search_placeholder" = "type to search...";
+"search_placeholder" = "type to AI...";
 "clear_tooltip" = "Clear unpinned items.\nSelect with ⇧ to clear all.";
 "clear_all_tooltip" = "Clear all items.";
 "about_tooltip" = "Read more about application.";
